invalid-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: invalid-nodeport-service
spec:
  selector:
    app: MyApp
  type: NodePort
  ports:
  - port: 80
    targetPort: 9376
    nodePort: 30007
